--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,21 @@
-body {
-  background-image:url('anhr/as.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
+body{ 
+    background-image:url('anhr/bc.jpg');
+    background-repeat:no-repect;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    
+} 
 h1 {
-  color: blue;
+    text-align: center;
+    font-famile: Time New Romen;
+    font-weight: normal;
+         font-size:350% ;
 }
-p {
-  color: red;
+p{
+     font-famile: Time New Romen;
+     font-size:250% ;
 }
 pre{
-	background-image:url('anhr/back.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-a:link {
-  color: green;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:visited {
-  color: pink;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: red;
-  background-color: transparent;
-  text-decoration: underline;
-}
-
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: underline;
-}
-img{
-  width:400px;
-  height:379px;
-}
-
-table,td,th{
-font-size: 40px;
-}
-table, td {
-  border: 6px double black;
-table,td,th{
-font-size: 40px;
-}
-table, td {
-  border: 6px double black;
-  border-collapse: collapse;
-  background-color: #96D4D4;
-  border-radius: 10px;
-}
-th,td{
-background-color: Khaki;
-border: 2px solid black;}
-  background-color: #96D4D4;
-  border-radius: 10px;
-}
-th,td{
-  padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
+     font-famile: Time New Romen;
+     font-size:250% ;
 }
