--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{ 
-    background-image:url('img/bc.jpg');
+    background-image:url('img/anh.jpg');
     background-repeat:no-repect;
     background-attachment: fixed;
     background-size: 100% 100%;
