--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,12 @@ h1 {
     text-align: center;
     font-famile: Time New Romen;
     font-weight: normal;
-         font-size:350% ;
+    font-size:550% ;
+}
+h2 {
+    font-famile: Time New Romen;
+    font-weight: normal;
+    font-size:350% ;
 }
 p{
      font-famile: Time New Romen;
