--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,16 @@ body{
 } 
 h1 {
     text-align: center;
-    font-famile: Time New Romen;
-    font-size:550% ;
-}
-h2 {
-    font-famile: Time New Romen;
+    font-family: Time New Romen;
     font-size:350% ;
 }
+h2 {
+    font-family: Time New Romen;
+    font-size:250% ;
+}
 p{
-     font-famile: Time New Romen;
-     font-size:250% ;
+     font-family: Time New Romen;
+     font-size:150% ;
 }
 pre{
      <br><br>
@@ -25,6 +25,6 @@ img{
     text-align: center;
 }
 dl{
-    font-famile: Time New Romen;
-     font-size:250% ;
+    font-family: Time New Romen;
+     font-size:150% ;
 }
